Fix picture overflow

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -2,6 +2,10 @@ body {
 // font-family: 'Lora', serif;
 }
 
+.photo-about {
+  height: 384px;
+}
+
 .section {
   background: #CCCCCC;
   color: #272822;
